# rust-109821-reproducible

./: .gitignore  README.md  build-x86_64-pc-windows-msvc.sh
nightly/: Cargo.toml  READMD.md  build-x86_64-unknown-linux-gnu.sh  rust-toolchain.toml
nightly/src/: main.rs
stable/: Cargo.toml  README.md
stable/foo/src/: lib.rs
stable/src/: main.rs
