[package]
name = "tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
"foo" = { path = "./foo" }

[workspace]
members = [
    "bar",
    "foo"
]

[profile.release]
lto = "fat"
opt-level = 1
codegen-units = 1
